u - minor fix for logo icon width on mobile

--- a/themes/twentytwenty-child/style.css
+++ b/themes/twentytwenty-child/style.css
@@ -114,7 +114,7 @@ a:hover {
 
 .logo-stripe img {
   object-fit: contain;
-  max-width: 150px;
+  max-width: 135px;
   margin: 15px;
 }
 
